# house_price_prediction_service

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: CI_actions.yml
src/: __init__.py
src/data_modeling/: data_loading.py
src/models/: __init__.py  linear_regression.py
src/training/: interfaces.py  train_plain.py
src/utils/: db_utils.py  exceptions.py  metric_utils.py  train_utils.py  utils.py
tests/: __init__.py  test_data_loading.py  test_dummy.py
tests/data_modeling/: test_data_loading.py
tests/models/: test_linear_regression.py
tests/utils/: test_metric_utils.py  test_train_utils.py
