[tool.poetry]
name = "house_price_prediction_service"
version = "0.1.0"
description = ""
authors = ["Diego Quintana <d.quintana.esteve@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
dvc = "^2.10.0"
hydra-core = "^1.1.1"
pdoc3 = "^0.10.0"
sqlalchemy = "^2.0.17"
datetime = "^5.1"
pandas = "^2.0.3"
mysqlclient = "^2.2.0"
pymysql = "^1.1.0"
pytest = "^7.4.0"
types-pymysql = "^1.1.0.0"
pandas-stubs = "^2.0.2.230605"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
extend-ignore = "E203"

[tool.ruff]
ignore = ["E501"]
select = ["B","C","E","F","W","B9", "I", "N", "Q"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

[tool.ruff.mccabe]
max-complexity = 10
